--- a/mhvdb2/templates/_datatables.html
+++ b/mhvdb2/templates/_datatables.html
@@ -8,6 +8,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         $('.datatable').dataTable({
+            retrieve: true,
 {% block datatable_options %}
 {% endblock %}
         });
